remove preceeding slash for static dir

--- a/docs/generator/templates/base.html
+++ b/docs/generator/templates/base.html
@@ -20,7 +20,7 @@
     ::if title::
     <meta name="description" content="::title::">
     ::end::
-    
+
     ::if testurls.streams::
     ::foreach testurls.streams::
     <meta name="test_stream" content="::__current__::">
@@ -65,19 +65,19 @@
             });
         });
     </script>
-    
-    <link rel="stylesheet" href="::basepath::/static/bootstrap-4.3.1.min.css">
-    <script src="::basepath::/static/uapi.js" type="text/javascript"></script>
+
+    <link rel="stylesheet" href="::basepath::static/bootstrap-4.3.1.min.css">
+    <script src="::basepath::static/uapi.js" type="text/javascript"></script>
 
     <style>
         @font-face {
             font-family: 'Visuelt Regular Webfont';
-            src: url('::basepath::/static/fonts/visuelt_regular-web.eot');
-            src: url('::basepath::/static/fonts/visuelt_regular-web.eot?#iefix') format('embedded-opentype'),
-                url('::basepath::/static/fonts/visuelt_regular-web.woff') format('woff'),
-                url('::basepath::/static/fonts/visuelt_regular-web.woff2') format('woff2'),
-                url('::basepath::/static/fonts/visuelt_regular-web.ttf') format('truetype'),
-                url('::basepath::/static/fonts/visuelt_regular-web.svg') format('svg');
+            src: url('::basepath::static/fonts/visuelt_regular-web.eot');
+            src: url('::basepath::static/fonts/visuelt_regular-web.eot?#iefix') format('embedded-opentype'),
+                url('::basepath::static/fonts/visuelt_regular-web.woff') format('woff'),
+                url('::basepath::static/fonts/visuelt_regular-web.woff2') format('woff2'),
+                url('::basepath::static/fonts/visuelt_regular-web.ttf') format('truetype'),
+                url('::basepath::static/fonts/visuelt_regular-web.svg') format('svg');
             font-weight: normal;
             font-style: normal;
         }
@@ -170,7 +170,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div id="navbar" class="navbar-collapse collapse">
-                <script src="::basepath::/static/menu.js"></script>
+                <script src="::basepath::static/menu.js"></script>
             </div>
             <!--/.navbar-collapse -->
 
